[package]
name = "tokio-console-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1"
crossterm = "0.24"
ratatui = "0.29.0"
tracing-appender = "0.2"

[build]
rustflags = ["--cfg", "tokio_unstable"]

